fix: Hero section alignment + add GitHub link in navbar

--- a/site/index.html
+++ b/site/index.html
@@ -434,6 +434,10 @@
                 <a href="#skills" class="px-5 py-2.5 text-sm font-medium text-slate-400 hover:text-white transition-all duration-300 rounded-full hover:bg-white/5 hover:shadow-[0_0_15px_rgba(255,255,255,0.15)]" data-ml-key="nav_skills">Compétences</a>
                 <a href="#projects" class="px-5 py-2.5 text-sm font-medium text-slate-400 hover:text-white transition-all duration-300 rounded-full hover:bg-white/5 hover:shadow-[0_0_15px_rgba(255,255,255,0.15)]" data-ml-key="nav_projects">Projets</a>
                 <a href="livrables.html" class="px-5 py-2.5 text-sm font-medium text-slate-400 hover:text-white transition-all duration-300 rounded-full hover:bg-white/5 hover:shadow-[0_0_15px_rgba(255,255,255,0.15)]" data-ml-key="nav_livrables">Livrables</a>
+                <a href="https://github.com/FlavienBardet/Portfolio" target="_blank" rel="noopener noreferrer" class="px-5 py-2.5 text-sm font-medium text-slate-400 hover:text-white transition-all duration-300 rounded-full hover:bg-white/5 hover:shadow-[0_0_15px_rgba(255,255,255,0.15)] inline-flex items-center gap-1.5">
+                    <i data-lucide="github" class="w-4 h-4"></i>
+                    <span>GitHub</span>
+                </a>
             </div>
 
             <!-- Language Toggle FR/EN - Dynamic -->
@@ -455,9 +459,9 @@
         
         <!-- HERO SECTION -->
         <section class="mb-32 relative">
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16 items-center mb-24 relative">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16 items-start mb-24 relative">
                 
-                <div class="z-20 order-1 flex flex-col items-start text-left relative pb-4">
+                <div class="z-20 order-1 flex flex-col items-start text-left relative">
                     <!-- Status Tags Bar (Conteneur Glassmorphism Unifié) -->
                     <div class="inline-flex flex-wrap items-center gap-3 px-4 py-3 mb-8 rounded-full bg-slate-800/30 border border-slate-700/50 backdrop-blur-md">
                         <!-- Open for projects (Primary) -->
@@ -511,8 +515,8 @@
                     </div>
                 </div>
 
-                <div class="z-10 relative order-2 w-full flex flex-col gap-10">
-                    <div class="relative w-full aspect-[4/3] rounded-[2rem] group">
+                <div class="z-10 relative order-2 w-full max-w-md lg:max-w-lg mx-auto lg:mx-0 flex flex-col gap-10">
+                    <div class="relative w-full aspect-[4/5] rounded-[2rem] group">
                         <div class="absolute -right-4 -top-4 w-2/3 h-2/3 bg-emerald-500/20 rounded-full blur-[80px] pointer-events-none -z-10"></div>
                         <div class="absolute -left-4 -bottom-4 w-1/2 h-1/2 bg-blue-500/10 rounded-full blur-[60px] pointer-events-none -z-10"></div>
 
