fix: Update MedTech label in translation objects

--- a/site/index.html
+++ b/site/index.html
@@ -1428,7 +1428,7 @@
                 stat_certified: "PSPO I",
                 stat_certified_label: "Certifié",
                 stat_focus: "Focus",
-                stat_focus_label: "MedTech & EdTech",
+                stat_focus_label: "MedTech",
                 
                 // Skills Section
                 skills_title: "Mes compétences",
@@ -1486,7 +1486,7 @@
                 stat_certified: "PSPO I",
                 stat_certified_label: "Certified",
                 stat_focus: "Focus",
-                stat_focus_label: "MedTech & EdTech",
+                stat_focus_label: "MedTech",
                 
                 // Skills Section
                 skills_title: "My Skills",
