--- a/site/index.html
+++ b/site/index.html
@@ -235,18 +235,41 @@
             height: 100%;
             border-radius: 3px;
             transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+        }
+        .skill-fill::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            background: white;
+            filter: blur(2px);
+            opacity: 0.8;
         }
         .skill-fill--emerald {
-            background: linear-gradient(90deg, #10b981, #22c55e);
-            box-shadow: 0 0 12px rgba(16, 185, 129, 0.5);
+            background: linear-gradient(90deg, #059669, #10b981, #34d399);
+            box-shadow: 0 0 15px rgba(16, 185, 129, 0.6), inset 0 1px 0 rgba(255,255,255,0.2);
+        }
+        .skill-fill--emerald::after {
+            box-shadow: 0 0 8px 3px rgba(52, 211, 153, 0.8);
         }
         .skill-fill--cyan {
-            background: linear-gradient(90deg, #06b6d4, #22d3ee);
-            box-shadow: 0 0 12px rgba(6, 182, 212, 0.5);
+            background: linear-gradient(90deg, #0891b2, #06b6d4, #22d3ee);
+            box-shadow: 0 0 15px rgba(6, 182, 212, 0.6), inset 0 1px 0 rgba(255,255,255,0.2);
+        }
+        .skill-fill--cyan::after {
+            box-shadow: 0 0 8px 3px rgba(34, 211, 238, 0.8);
         }
         .skill-fill--purple {
-            background: linear-gradient(90deg, #8b5cf6, #a855f7);
-            box-shadow: 0 0 12px rgba(139, 92, 246, 0.5);
+            background: linear-gradient(90deg, #7c3aed, #8b5cf6, #a855f7);
+            box-shadow: 0 0 15px rgba(139, 92, 246, 0.6), inset 0 1px 0 rgba(255,255,255,0.2);
+        }
+        .skill-fill--purple::after {
+            box-shadow: 0 0 8px 3px rgba(168, 85, 247, 0.8);
         }
 
         /* Timeline Card Style */
@@ -592,7 +615,7 @@
                     <div class="flex items-center gap-6">
                         <div class="h-1 w-24 bg-gradient-to-r from-emerald-500 via-cyan-500 to-purple-500 rounded-full shadow-[0_0_15px_rgba(16,185,129,0.6)]"></div>
                         <p class="font-mono text-xs md:text-sm tracking-[0.15em] uppercase font-bold text-slate-500">
-                            Triple expertise • Dashboard
+                            De l'Intuition Clinique à l'Impact Data
                         </p>
                     </div>
                 </div>
@@ -618,19 +641,23 @@
                         <div class="space-y-2">
                             <div class="skill-item group">
                                 <span class="skill-name">Python (Pandas, NumPy)</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--emerald" style="width: 66%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--emerald" style="width: 60%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">Machine Learning</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--emerald" style="width: 66%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--emerald" style="width: 45%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">Power BI & Data Modeling</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--emerald" style="width: 66%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--emerald" style="width: 65%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">GenAI (RAG, LangChain)</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--emerald" style="width: 66%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--emerald" style="width: 50%"></div></div>
+                            </div>
+                            <div class="skill-item group">
+                                <span class="skill-name">Data Storytelling</span>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--emerald" style="width: 70%"></div></div>
                             </div>
                         </div>
                     </div>
@@ -653,19 +680,23 @@
                         <div class="space-y-2">
                             <div class="skill-item group">
                                 <span class="skill-name">Product Strategy & Roadmap</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--cyan" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--cyan" style="width: 55%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">User Stories & Personas</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--cyan" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--cyan" style="width: 70%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">Analyse ROI & Rentabilité</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--cyan" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--cyan" style="width: 50%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">Gouvernance & RGPD</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--cyan" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--cyan" style="width: 65%"></div></div>
+                            </div>
+                            <div class="skill-item group">
+                                <span class="skill-name">Agilité (Scrum)</span>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--cyan" style="width: 75%"></div></div>
                             </div>
                         </div>
                     </div>
@@ -688,19 +719,23 @@
                         <div class="space-y-2">
                             <div class="skill-item group">
                                 <span class="skill-name">Analyses Statistiques</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--purple" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--purple" style="width: 75%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">Data Wrangling & ETL</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--purple" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--purple" style="width: 60%"></div></div>
                             </div>
                             <div class="skill-item group">
-                                <span class="skill-name">Leadership & Mentoring</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--purple" style="width: 100%"></div></div>
+                                <span class="skill-name">Rigueur Scientifique</span>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--purple" style="width: 80%"></div></div>
                             </div>
                             <div class="skill-item group">
                                 <span class="skill-name">Communication</span>
-                                <div class="skill-gauge"><div class="skill-fill skill-fill--purple" style="width: 100%"></div></div>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--purple" style="width: 75%"></div></div>
+                            </div>
+                            <div class="skill-item group">
+                                <span class="skill-name">Analyse des Biais Cognitifs</span>
+                                <div class="skill-gauge shadow-inner"><div class="skill-fill skill-fill--purple" style="width: 85%"></div></div>
                             </div>
                         </div>
                     </div>
