fix: Correction lien PDF Guide Power BI (nom simplifie sans accents)

--- a/site/livrables.html
+++ b/site/livrables.html
@@ -404,7 +404,7 @@
                         <span class="px-2.5 py-1 rounded-full bg-cyan-500/10 border border-cyan-500/20 text-cyan-400 text-xs font-mono">Storytelling</span>
                     </div>
                     
-                    <a href="assets/pdf/GUIDE%20M%C3%89THODOLOGIQUE%20_%20Cr%C3%A9ation%20de%20tableaux%20de%20bord%20d%C3%A9cisionnels%20sur%20Power%20BI.pdf" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 px-5 py-2.5 bg-slate-900/80 border border-purple-500/40 text-purple-400 text-sm font-bold rounded-xl hover:bg-purple-500/10 hover:shadow-[0_0_20px_rgba(168,85,247,0.2)] transition-all group/btn">
+                    <a href="assets/pdf/guide-methodologique-powerbi.pdf" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 px-5 py-2.5 bg-slate-900/80 border border-purple-500/40 text-purple-400 text-sm font-bold rounded-xl hover:bg-purple-500/10 hover:shadow-[0_0_20px_rgba(168,85,247,0.2)] transition-all group/btn">
                         <i data-lucide="book-open" class="w-4 h-4"></i>
                         <span>Ouvrir le Guide (PDF)</span>
                     </a>
